<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TipCalculator</string>
    <string name="action_settings">Settings</string>
    <string name="amount">Amount</string>
    <string name="custom_percentage">Custom %</string>
    <string name="fifteenPercent">15%</string>
    <string name="eighteenPercent">18%</string>
    <string name="tip">Tip</string>
    <string name="total">Total</string>

</resources>
