<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/gridLayout"
    android:focusableInTouchMode="false"
    android:columnCount="2"
    android:useDefaultMargins="true"
    android:padding="@dimen/text_view_padding">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:inputType="number"
        android:id="@+id/amountEditText"
        android:layout_row="0"
        android:layout_column="1"

        android:layout_weight="1"
        android:digits="0123456789."
        android:maxLength="6"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/amountDisplayTextView"
        android:layout_row="0"
        android:layout_weight="1"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"
        android:padding="@dimen/text_view_padding"
        android:background="@android:color/holo_blue_bright"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/customPercentTextView"
        android:layout_row="1"
        android:layout_column="0"
        android:text="@string/custom_percentage" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/amount"
        android:id="@+id/amountTextView"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_gravity="right"
        android:labelFor="@+id/amountEditText" />

    <SeekBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/customTipSeekBar"
        android:layout_column="1"
        android:layout_row="1"
        android:max="30"
        android:progress="18"
        android:layout_gravity="fill_horizontal"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/percentLinearLayout"
        android:layout_column="1"
        android:layout_row="2"
        android:layout_gravity="fill_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/percent15TextView"
            android:text="@string/fifteenPercent"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_marginRight="@dimen/text_view_padding" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/percentCustomTextView"
            android:text="@string/eighteenPercent"
            android:layout_weight="1"
            android:gravity="center" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/tip"
        android:id="@+id/tipTextView"
        android:layout_column="0"
        android:layout_row="3"
        android:textAllCaps="false"
        android:soundEffectsEnabled="false"
        android:layout_gravity="right" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tipLinearLayout"
        android:layout_column="1"
        android:layout_row="3"
        android:layout_gravity="fill_horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/tip15TextView"
            android:background="@android:color/holo_orange_light"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="@dimen/text_view_padding"
            android:layout_marginRight="@dimen/text_view_padding" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/tipCustomTextView"
            android:background="@android:color/holo_orange_light"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="@dimen/text_view_padding" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/totalLinearLayout"
        android:layout_column="1"
        android:layout_row="4"
        android:layout_gravity="fill_horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/total15TextView"
            android:background="@android:color/holo_orange_light"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="@dimen/text_view_padding"
            android:layout_marginRight="@dimen/text_view_padding"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/totalCustomTextView"
            android:background="@android:color/holo_orange_light"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="@dimen/text_view_padding" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/total"
        android:id="@+id/totalTextView"
        android:layout_column="0"
        android:layout_row="4"
        android:layout_gravity="right" />
</GridLayout>